# qml-demo

./: .gitignore  README.md
tcpClient/: CMakeLists.txt  Main.qml  NetWork.cpp  NetWork.h  main.cpp
tcpServer/: CMakeLists.txt  Main.qml  NetWorkComp.cpp  NetWorkComp.h  main.cpp  singleton.h
